[package]
name = "card_view"
version = "0.1.0"
authors = ["Héctor Ramón Jiménez <hector0193@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
flexi_logger = "0.28.0"
# iced = { version = "0.12.1", default-features = false }
iced = { git = "https://github.com/iced-rs/iced.git", default-features = false, rev = "a94984d681875146d7af9f568bf8713503c1ca96", features = [
    "web-colors",
    "fira-sans",
    "advanced",
    "tokio",
    "wgpu",
] }
log = "0.4.21"
